Players can now enter the game

--- a/templates/game.html
+++ b/templates/game.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
-{{player}}
+<h1>{{location['name']}}</h1>
+
+<p>{{location['description']}}</p>
+
+<p>You are playing {{player['name']}}</p>
 
 {% endblock %}
