Adding more rooms and styling

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,19 @@
 
 <html>
 	<head>
+		<title>Crumbly castle {% block title %}{%endblock%}</title>
+
+		<link href='http://fonts.googleapis.com/css?family=Felipa' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="/static/css/base.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	</head>
 
 	<body>
 	{% block content %}
 
 	{% endblock %}
+	<script src="/static/js/jquery.details-1.5.min.js"></script>
+
 	</body>
 
 </html>
