--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,7 +10,7 @@ body {
 
 	max-width: 30em;
 
-	background-color: #c7bfbf;
+	background-color: #c7c1c1;
 	color: #6b6767;
 }
 
@@ -50,9 +50,13 @@ a:visited {
 
 .character .description {
 	font-size: 0.8em;
-	margin-left: 1em;
+	margin-left: 2em;
 }
 
 .no-details details { display: block }
+.no-details details > summary {
+	background-color: #c7bfbf;
+	padding: 0.5em;
+}
 .no-details details > summary::before { content:"► " }
 .no-details details.open > summary::before { content:"▼ " }
