--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Crumbly castle {% block title %}{%endblock%}</title>
 
-		<link href='http://fonts.googleapis.com/css?family=Felipa' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Felipa|Almendra+SC' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="/static/css/base.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	</head>
