--- a/templates/game.html
+++ b/templates/game.html
@@ -13,7 +13,7 @@
 
 <p>Here in the {{location['name']}} with you are:</p>
 
-<ul>
+<ul class="characters">
 	{% for p in other_players %}
 	<li class="character">
 		<details>
