--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
 	{% endblock %}
 	<script src="/static/js/jquery.details-1.5.min.js"></script>
-
+	<script src="/static/js/behaviours.js"></script>
 	</body>
 
 </html>
