--- a/templates/game.html
+++ b/templates/game.html
@@ -8,7 +8,7 @@
 
 <p>You are playing <strong>{{player['name']}}</strong></p>
 
-
+<section id="player-data" data-character-id="{{player['id']}}">
 {% if other_players %}
 
 <p>Here in the {{location['name']}} with you are:</p>
@@ -23,8 +23,10 @@
 	</li>
 	{% endfor %}
 </ul>
+</section>
 
 {% endif %}
+</section>
 
 {% if exits %}
 
