--- a/templates/game.html
+++ b/templates/game.html
@@ -11,18 +11,20 @@
 <section id="player-data" data-character-id="{{player['id']}}">
 {% if other_players %}
 
-<p>Here in the {{location['name']}} with you are:</p>
+	<section id="other-players">
+		<p>Here in the {{location['name']}} with you are:</p>
 
-<ul class="characters">
-	{% for p in other_players %}
-	<li class="character">
-		<details>
-			<summary>{{p['name']}}</summary>
-			<p class="description">{{p['description']}}</p>
-		</details>
-	</li>
-	{% endfor %}
-</ul>
+		<ul class="characters">
+			{% for p in other_players %}
+			<li class="character">
+				<details>
+					<summary>{{p['name']}}</summary>
+					<p class="description">{{p['description']}}</p>
+				</details>
+			</li>
+			{% endfor %}
+		</ul>
+		</section>
 </section>
 
 {% endif %}
